# copier-template-python

./: .gitignore  .gitignore.jinja  .pre-commit-config.yaml.jinja  README.md  README.md.jinja  cookiecutter.json  copier.yaml  copier.yml  pyproject.toml.jinja
src/{{package_name}}/: __init__.py.jinja
{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.__package_name}}/: __init__.py
{{project_slug}}/: README.md.jinja
