[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=7.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">=3.11"
keywords = []
authors = [
  { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = []

dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
lint = ["ruff"]
format = ["black"]
build = ["build"]
dev = ["{{cookiecutter.project_slug}}[test,lint,format,build]"]

[tool.setuptools_scm]

{% if cookiecutter.pdm %}
[tool.pdm]

[tool.pdm.scripts]
test = "pytest --cov=src tests/"
lint = "ruff check ."
format = "black ."
{% endif %}